--- a/wp-content/themes/tesla-theme/scss/style.scss
+++ b/wp-content/themes/tesla-theme/scss/style.scss
@@ -1,3 +1,24 @@
+@import "_fonts.scss";
+@import "partials/_header.scss";
+@import "partials/_footer.scss";
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 body {
-    background-image: url();
+    height: 95.5vh;
+    background-image: url("../images/background.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: bottom;
+    position: relative;
+    font-family: "Myriad Pro", serif;
+}
+
+.container {
+    width: 81vw;
+    margin: 0 auto;
 }
