--- a/wp-content/themes/tesla-theme/scss/partials/_pricing-table.scss
+++ b/wp-content/themes/tesla-theme/scss/partials/_pricing-table.scss
@@ -3,23 +3,27 @@
     width: 100%;
     display: flex;
     align-items: center;
-    justify-content: space-around;
+    justify-content: space-between;
     //border: 1px solid red;
 }
 
 .pricing-table {
-    width: 290px;
+    width: 293px;
     height: 435px;
-    box-shadow: 0 15px 30px 0 #000;
+    box-shadow: 0 15px 30px 0 rgba(0, 0, 0, 0.75);
+    background-color: #73787d;
+    opacity: 0.95;
 }
 
 .pricing-table__header {
-    width: 291px;
-    height: 165px;
+    width: 100%;
+    height: 168px;
     background-color: #656a72;
     display: flex;
     flex-direction: column;
     align-items: center;
+    padding-top: 28px;
+    padding-bottom: 21px;
     justify-content: space-around;
 }
 
@@ -27,35 +31,37 @@
     color: #fff;
     font-size: 30px;
     font-weight: 400;
+    line-height: 30px;
+    margin-bottom: -7px;
 }
 
 .separation {
     width: 28px;
     height: 2px;
     background-color: #fff;
+    opacity: 0.3;
 }
 
 .pricing-table__content {
     height: 270px;
-    width: 290px;
-    background-color: #73787d;
-    opacity: 0.95;
+    width: 100%;
     position: relative;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
     text-align: center;
+    padding-top: 24px;
+    padding-bottom: 33px;
 }
 
 .pricing-table__content__features {
     font-size: 14px;
     font-weight: 400;
-    line-height: 44px;
     color: #fff;
 }
 
-.pricing-table__content__add-info {
+.pricing-table__content__add-info-or-price {
     font-size: 24px;
     font-weight: 400;
     color: #fff;
@@ -68,8 +74,40 @@
     background-color: #37406c;
     color: #fff;
     text-decoration: none;
+    text-transform: uppercase;
     border-radius: 20px;
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.pricing-table.category-premium {
+    box-shadow: 0 15px 30px rgba(216, 220, 224, 0.35);
+    background-color: #fff;
+    opacity: 1;
+    .pricing-table__header {
+        background-color: #f8f9f9;
+        .model-title {
+            color: #60697d;
+        }
+        .separation {
+            background-color: #60697d;
+            opacity: 0.1;
+        }
+    }
+    .pricing-table__content {
+        .pricing-table__content__features {
+            color: #60697d;
+        }
+        .separation {
+            background-color: #60697d;
+            opacity: 0.1;
+        }
+        .pricing-table__content__add-info-or-price {
+            color: #60697d;
+        }
+        .pricing-table__btn {
+            background-color: #ea525c;
+        }
+    }
 }
