--- a/wp-content/themes/tesla-theme/scss/partials/_pricing-table.scss
+++ b/wp-content/themes/tesla-theme/scss/partials/_pricing-table.scss
@@ -4,15 +4,26 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    //border: 1px solid red;
 }
 
 .pricing-table {
+    position: relative;
     width: 293px;
     height: 435px;
-    box-shadow: 0 15px 30px 0 rgba(0, 0, 0, 0.75);
-    background-color: #73787d;
-    opacity: 0.95;
+}
+
+.pricing-table::before {
+   content: "";
+   display: flex;
+   position: absolute;
+   top: 0;
+   left: 0;
+   z-index: -1;
+   width: 100%;
+   height: 100%;
+   background-color: #73787d;
+   box-shadow: 0 15px 30px 0 rgba(0, 0, 0, 0.75);
+   opacity: 0.95;
 }
 
 .pricing-table__header {
@@ -24,7 +35,7 @@
     align-items: center;
     padding-top: 28px;
     padding-bottom: 21px;
-    justify-content: space-around;
+    justify-content: space-between;
 }
 
 .model-title {
@@ -45,12 +56,10 @@
 .pricing-table__content {
     height: 270px;
     width: 100%;
-    position: relative;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
-    text-align: center;
     padding-top: 24px;
     padding-bottom: 33px;
 }
@@ -70,7 +79,7 @@
 .pricing-table__btn {
     display: block;
     width: 126px;
-    height: 39px;
+    height: 36px;
     background-color: #37406c;
     color: #fff;
     text-decoration: none;
@@ -79,29 +88,26 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    font-size: 14px;
+    font-weight: 400;
 }
 
+/*Category premium style*/
+
 .pricing-table.category-premium {
-    box-shadow: 0 15px 30px rgba(216, 220, 224, 0.35);
-    background-color: #fff;
-    opacity: 1;
+    .separation {
+        background-color: #60697d;
+        opacity: 0.1;
+    }
     .pricing-table__header {
         background-color: #f8f9f9;
         .model-title {
             color: #60697d;
         }
-        .separation {
-            background-color: #60697d;
-            opacity: 0.1;
-        }
     }
     .pricing-table__content {
         .pricing-table__content__features {
             color: #60697d;
-        }
-        .separation {
-            background-color: #60697d;
-            opacity: 0.1;
         }
         .pricing-table__content__add-info-or-price {
             color: #60697d;
@@ -110,4 +116,16 @@
             background-color: #ea525c;
         }
     }
+}
+
+.pricing-table.category-premium::before {
+   content: "";
+   display: flex;
+   position: absolute;
+   z-index: -1;
+   width: 100%;
+   height: 100%;
+   background-color: #fff;
+   box-shadow: 0 15px 30px rgba(216, 220, 224, 0.35);
+   opacity: 1;
 }
