--- a/wp-content/themes/tesla-theme/scss/partials/_header.scss
+++ b/wp-content/themes/tesla-theme/scss/partials/_header.scss
@@ -10,9 +10,10 @@
     justify-content: space-between;
 }
 
-#nav-icon4 {
-  width: 16px;
-  height: 14px;
+
+#nav-icon {
+  width: 20px;
+  height: 15px;
   position: relative;
   margin: 50px auto;
   -webkit-transform: rotate(0deg);
@@ -26,10 +27,10 @@
   cursor: pointer;
 }
 
-#nav-icon4 span {
+#nav-icon span {
   display: block;
   position: absolute;
-  height: 2.5px;
+  height: 3px;
   width: 100%;
   background: #7b7b7b;
   border-radius: 0 0 3px 3px;
@@ -45,10 +46,10 @@
   transition: .25s ease-in-out;
 }
 
-#nav-icon4 {
+#nav-icon {
 }
 
-#nav-icon4 span:nth-child(1) {
+#nav-icon span:nth-child(1) {
   top: 0px;
   -webkit-transform-origin: left center;
   -moz-transform-origin: left center;
@@ -56,41 +57,93 @@
   transform-origin: left center;
 }
 
-#nav-icon4 span:nth-child(2) {
-  top: 5px;
+#nav-icon span:nth-child(2) {
+  top: 6px;
   -webkit-transform-origin: left center;
   -moz-transform-origin: left center;
   -o-transform-origin: left center;
   transform-origin: left center;
 }
 
-#nav-icon4 span:nth-child(3) {
-  top: 10px;
+#nav-icon span:nth-child(3) {
+  top: 12px;
   -webkit-transform-origin: left center;
   -moz-transform-origin: left center;
   -o-transform-origin: left center;
   transform-origin: left center;
 }
 
-#nav-icon4.open span:nth-child(1) {
+#nav-icon.open span:nth-child(1) {
   -webkit-transform: rotate(45deg);
   -moz-transform: rotate(45deg);
   -o-transform: rotate(45deg);
   transform: rotate(45deg);
-  top: -3px;
-  left: 8px;
+  top: -1px;
+  left: 2.6px;
 }
 
-#nav-icon4.open span:nth-child(2) {
+#nav-icon.open span:nth-child(2) {
   width: 0%;
   opacity: 0;
 }
 
-#nav-icon4.open span:nth-child(3) {
+#nav-icon.open span:nth-child(3) {
   -webkit-transform: rotate(-45deg);
   -moz-transform: rotate(-45deg);
   -o-transform: rotate(-45deg);
   transform: rotate(-45deg);
-  top: 39px;
-  left: 8px;
+  top: 13px;
+  left: 2.6px;
+}
+
+.header__nav__menu {
+    display: none;
+}
+
+.visible {
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    height: 84vh;
+    width: 100vw;
+    margin-top: 8vh;
+    background-image: url("../images/nav-background.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 2;
+}
+
+.header__nav__menu__bar {
+    margin-top: 16vh;
+    list-style: none;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    flex-direction: column;
+    height: 60%;
+    li {
+        padding: 8px 30px;
+        text-align: center;
+        margin-bottom: 10px;
+        a {
+            text-decoration: none;
+            text-transform: uppercase;
+            font-size: 20px;
+            color: #fff;
+            font-weight: 700;
+            padding: 10px 20px;
+            letter-spacing: 2.5px;
+        }
+
+        a:hover {
+            border-bottom: 3px solid rgba(255, 255, 255, 0.8);
+            border-radius: 0 0 3px 3px;
+            //background-color: #fff;
+            color: #fff;
+            //opacity: 0.2;
+        }
+    }
 }
