--- a/wp-content/themes/tesla-theme/scss/partials/_pricing-table.scss
+++ b/wp-content/themes/tesla-theme/scss/partials/_pricing-table.scss
@@ -44,6 +44,7 @@
     font-weight: 400;
     line-height: 30px;
     margin-bottom: -7px;
+    margin-top: 0;
 }
 
 .separation {
@@ -68,12 +69,14 @@
     font-size: 14px;
     font-weight: 400;
     color: #fff;
+    margin: 0;
 }
 
 .pricing-table__content__add-info-or-price {
     font-size: 24px;
     font-weight: 400;
     color: #fff;
+    margin: 0;
 }
 
 .pricing-table__btn {
