profile style - done

--- a/wp-content/themes/tesla-theme/scss/style.scss
+++ b/wp-content/themes/tesla-theme/scss/style.scss
@@ -1,6 +1,7 @@
 @import "_fonts.scss";
 @import "partials/_header.scss";
 @import "partials/_pricing-table.scss";
+@import "partials/_profile.scss";
 @import "partials/_footer.scss";
 
 * {
