footer - needs correction

--- a/wp-content/themes/tesla-theme/scss/partials/_footer.scss
+++ b/wp-content/themes/tesla-theme/scss/partials/_footer.scss
@@ -2,9 +2,8 @@
     height: 8vh;
     width: 100%;
     background-color: #313131;
-    position: absolute;
+    position: sticky;
     bottom: 0;
-    left: 0;
 }
 
 .fc {
@@ -17,11 +16,12 @@
         padding-left: 15px;
         font-size: 12px;
         font-weight: 400;
-        line-height: 44px;
+        margin: 0;
     }
 }
 
 .footer__logo {
     width: 29px;
     height: 29px;
+    max-height: 7vh;
 }
